@@ -1,10 +1,12 @@
 MD5 b066a0a800c3aa974941a7c76abc2c57 gecko-sharp-0.5-r2.ebuild 747
 MD5 d27402ee4b50cb8f1dc0b545c1694b04 gecko-sharp-0.6.ebuild 892
-MD5 7d101dad11397961662018587cac38c3 ChangeLog 4784
+MD5 6ca6aae5bd643d210c8130ed8df2a89e gecko-sharp-0.11.ebuild 1287
+MD5 144b5b3505d4acb514df7d54d4f796a8 ChangeLog 4855
 MD5 76b314cc7b7b79b298dd4889dff8c9cd metadata.xml 159
 MD5 7054a219d3a0857c01eb4f4f291c87e8 gecko-sharp-0.10.ebuild 1289
 MD5 41db66016dd18480802fc0e658a04746 files/digest-gecko-sharp-0.5-r2 67
 MD5 9aa313387703e02ad1bcddcde0729a66 files/digest-gecko-sharp-0.6 67
+MD5 02acc8413a6dcf56b489599d5196cfa6 files/digest-gecko-sharp-0.11 72
 MD5 54b9bdcc1876fbeb916b8a5fb29adaa2 files/gecko-sharp-0.7-1.9.3-compat.diff 698
 MD5 e1474f95b8a6ffc1af4ec208a4bab724 files/digest-gecko-sharp-0.10 72
 MD5 14676f9b1811b8d166a7749bae1daa52 files/gecko-sharp-webshot-fix.patch 386
