@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/gecko-sharp
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gecko-sharp/Attic/ChangeLog,v 1.36 2005/09/16 07:03:13 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gecko-sharp/Attic/ChangeLog,v 1.37 2005/09/16 08:03:24 latexer Exp $
+
+  16 Sep 2005; Peter Johanson <latexer@gentoo.org> ChangeLog:
+  Bump.
 
   16 Sep 2005; Peter Johanson <latexer@gentoo.org> gecko-sharp-0.10.ebuild:
   Modify deps slightly.
